<resources>
    <string name="app_name">BibliotecaOn</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings"> Configuración </string>
    <string name="action_salir">Salir</string>
    <string name="action_cambiar_contraseña">Cambiar contraseña </string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sarah"> Sarah Item </string>
    <string name="menu_agregar_libro">Agregar libro</string>
    <string name="menu_buscar_libro">Buscar libro</string>

    <string name="home_second">Home Second</string>

    <string-array name="arrayServerSolic">
        <item>Emulador</item>
        <item>Localhost</item>
        <item>Remote</item>
    </string-array>

</resources>
