<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/navRegistrarLibro"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_agregar_libro" />
        <item
            android:id="@+id/navBuscarLibro"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_buscar_libro" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/sarahFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sarah" />
    </group>
</menu>
