<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pineda.bibliotecaon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pineda.bibliotecaon.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pineda.bibliotecaon.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/sarahFragment"
        android:name="com.pineda.bibliotecaon.SarahFragment"
        android:label="fragment_sarah"
        tools:layout="@layout/fragment_sarah" />
    <fragment
        android:id="@+id/navRegistrarLibro"
        android:name="com.pineda.bibliotecaon.RegistrarLibro"
        android:label="Registrar libro"
        tools:layout="@layout/fragment_registrar_libro" />
    <fragment
        android:id="@+id/navBuscarLibro"
        android:name="com.pineda.bibliotecaon.FragmentoBuscar"
        android:label="Buscar libro"
        tools:layout="@layout/fragment_fragmento_buscar" />
</navigation>